social icon overlaping problem solved by adding a line in css { margin-bottom:24px; } in #theme-lava.css > .call-to-action a i {}

--- a/css/theme-lava.css
+++ b/css/theme-lava.css
@@ -1168,6 +1168,7 @@ nav .container {
   border-radius: 50%;
   color: #fff;
   margin-right: 12px;
+  margin-bottom: 24px;
   font-size: 24px;
   line-height: 60px;
 }
